# modorganizer-bsatk

./: CMakeLists.txt  CMakePresets.json  README.md  Version.cmake  appveyor.yml  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml  linting.yml
cmake/: config.cmake.in
include/bsatk/: bsaarchive.h  bsaexception.h  bsafile.h  bsafolder.h  bsatk.h  bsatypes.h  errorcodes.h  filehash.h
src/: CMakeLists.txt  DDS.h  bsaarchive.cpp  bsaarchive.h  bsaexception.cpp  bsaexception.h  bsafile.cpp  bsafile.h  bsafolder.cpp  bsafolder.h  bsatk.h  bsatypes.cpp  bsatypes.h  dxgiformat.h  errorcodes.h  filehash.cpp  filehash.h
