CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)

ADD_COMPILE_OPTIONS($<$<CXX_COMPILER_ID:MSVC>:/MP> $<$<CXX_COMPILER_ID:MSVC>:$<$<CONFIG:RELEASE>:/O2>> $<$<CXX_COMPILER_ID:MSVC>:$<$<CONFIG:RELWITHDEBINFO>:/O2>>)

PROJECT(bsatk)

SET(DEPENDENCIES_DIR CACHE PATH "")

LIST(APPEND CMAKE_PREFIX_PATH ${LZ4_ROOT}/bin)

ADD_SUBDIRECTORY(src)
